--- a/TASK 1.html
+++ b/TASK 1.html
@@ -1,77 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <title>1st Task</title>
+    <style>
+        body {
+            background-color: skyblue;
+            font-family: Arial, sans-serif;
+        }
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            padding: 8px;
+        }
+        table {
+            margin-top: 10px;
+        }
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 14px;
+        }
+    </style>
 </head>
-<title>1st task </title>
+<body>
 
+    <h1>John Smith - Student Profile</h1>
 
-<body bgcolor="sky blue"></backgrond>
-    <h1> John Smith - Studen Profile</h1>
+    <h2>About & Grades Table Form</h2>  
+    <img src="sun set.jpg" width="30%" alt="Sunset">
 
-<h2> About Grades Table  Form </h2>  
-<img src="sun set.jpg" width="30%">
-<style type="text/css">
-         table,th,td {
-            border: 1px solid 
-        black;
-              border-spacing: 1px;    
-            }  
-    
-        </style>
-<h1>About </h1>
+    <h1>About</h1>
+    <p>
+        Hi, I am John Smith, a passionate Computer Science student currently in my second year <br>
+        at Tech University. I love coding, problem-solving, and learning new technologies. <br>
+        When I am not studying, you can find me working on personal projects, contributing to <br>
+        open-source software, or exploring the latest trends in web development.
+    </p>
+    <p>
+        Check out my projects on 
+        <a href="https://github.com/" target="_blank">Github</a>
+    </p>
 
+    <h1>Grades</h1>
+    <table>
+        <tr>
+            <th>Subject</th>
+            <th>Grade</th>
+            <th>Credits</th>
+        </tr>
+        <tr>
+            <td>Web Development</td>
+            <td>A</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>Data Structures</td>
+            <td>A-</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>Database Systems</td>
+            <td>B+</td>
+            <td>3</td>
+        </tr>
+    </table>
 
+    <br>
+    <form> 
+        First name: <br><input type="text" name="fname"> <br><br>
+        Email: <br><input type="email" name="email"> <br><br>
+        <input type="submit" value="Submit">
+    </form>
 
-<P>
-Hi Iam John Smith, a passionate computer scince studen currently in my second year <br>
-at Tach University.i love cording , problem-solving, and learning new technologies.<br>
-when Iam not studying, you can find me working on personal project ,contibuting to <br>
-open-source software, or exploring the latest trends in web development.
- 
-</P>
-<p>check out my projects on <a href="https://github.com/">Github</p></a>
-<h1>Grades</h1>
+    <footer>
+        <br>© 2025 John Smith - All rights reserved.
+    </footer>
 
-
-
-
-
-
-   <table>
-                  <tr>
-                    <td><b> Subject </b></td>
-                    <td><b> Grade</b></td>
-                    <td><b>credits</b>   </td>
-                  </tr>
-                  <tr>
-                     <td>  Web Development </td>
-                     <td> A </td>
-                     <td>  4 </td>
-                  </tr>
-                  <tr>
-                      <td> Data Structures </td>
-                      <td> A- </td>
-                      <td>  3 </td>
-                  </tr>
-                   <tr>
-                      <td> Database systems </td>
-                      <td> B+ </td>
-                      <td>  3</td>
-                      </tr>
-                </table>
-                <br></br>
- <form> 
-    First name <br><input type="text" name="fname"> <br> 
-    Email <br> <input type="text" name="email"> <br>
-            <br>   <input type="submit" name="submit">
- </form>
-
-          </body>
-  
-
-<footer><br>
-   © 2025 John Smith All rights reserved.
-</footer>
-
+</body>
 </html>
